--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build:prod": "vite build --mode prod",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "test": "vitest run",
+  "test:watch": "vitest"
   },
   "dependencies": {
     "@primevue/themes": "^4.2.5",
@@ -46,14 +48,16 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.17.11",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue": "^5.2.4",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^14.2.0",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-vue": "^9.32.0",
+    "jsdom": "^26.1.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
@@ -61,6 +65,7 @@
     "unplugin-vue-components": "^0.27.5",
     "vite": "^6.0.7",
     "vite-plugin-vue-devtools": "^7.6.8",
+    "vitest": "^3.2.4",
     "vue-tsc": "^2.2.0"
   }
 }
